[Home]

Summary:ASTERISK-28838: AST_MODULE_INFO requires, MODULEINFO does not mention
Reporter:Alexander Traud (traud)Labels:
Date Opened:2020-04-16 03:56:10Date Closed:2020-04-20 09:14:07
Priority:MinorRegression?
Status:Closed/CompleteComponents:General
Versions:16.9.0 17.3.0 Frequency of
Occurrence
Related
Issues:
Environment:Attachments:
Description:Follow-up of ASTERISK-28789 which just looked at the scenario ‘use/require’. I ran another script over the whole Asterisk. There are 12 modules which do not mention at all the internal library in MODULEINFO although it is declared as required in AST_MODULE_INFO. Let us call this scenario ‘no/require’:
{code}
 res_pjsip_pubsub res/res_pjsip_refer.c
res_pjsip_session res/res_pjsip_one_touch_record_info.c
res_pjsip_session res/res_pjsip_messaging.c
res_pjsip_session res/res_pjsip_dtmf_info.c
res_pjsip_session res/res_pjsip_rfc3326.c
res_pjsip_session res/res_pjsip_empty_info.c
res_pjsip_session res/res_pjsip_path.c
res_pjsip_session res/res_pjsip_diversion.c
res_pjsip_session res/res_pjsip_nat.c
                * cdr/cdr_odbc.c
         res_adsi apps/app_getcpeid.c
         res_curl funcs/func_curl.c
func_curl,res_curl res/res_config_curl.c
{code}Anyone who takes over this? In the first step, you have to double-check whether the modules are really required at runtime: Is AST_MODULE_INFO correct at all? If a module is optional (or not used at all), its AST_MODULE_INFO must be updated. Then, the second step is to update MODULEINFO (how, see ASTERISK-28789).
Comments:By: Asterisk Team (asteriskteam) 2020-04-16 03:56:11.965-0500

Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution.

A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report.

Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process].

Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur.

By: Alexander Traud (traud) 2020-04-17 06:54:48.438-0500

OK. While analyzing the cause (step zero) each time, I found another fallacy and thanks to that two more modules:
{code}res/res_pjsip_caller_id.c
res/res_pjsip_dlg_options.c{code}I created code reviews for all of those and the ones above.

By: Friendly Automation (friendly-automation) 2020-04-20 09:14:08.648-0500

Change 14268 merged by Friendly Automation:
res_pjsip: Add build-time dependency.

[https://gerrit.asterisk.org/c/asterisk/+/14268|https://gerrit.asterisk.org/c/asterisk/+/14268]

By: Friendly Automation (friendly-automation) 2020-04-20 09:21:02.047-0500

Change 14260 merged by George Joseph:
res_pjsip: Add build-time dependency.

[https://gerrit.asterisk.org/c/asterisk/+/14260|https://gerrit.asterisk.org/c/asterisk/+/14260]

By: Friendly Automation (friendly-automation) 2020-04-20 09:22:38.129-0500

Change 14259 merged by George Joseph:
res_pjsip: Add build-time dependency.

[https://gerrit.asterisk.org/c/asterisk/+/14259|https://gerrit.asterisk.org/c/asterisk/+/14259]

By: Friendly Automation (friendly-automation) 2020-04-20 09:23:09.241-0500

Change 14281 merged by George Joseph:
res_pjsip: Add build-time dependency.

[https://gerrit.asterisk.org/c/asterisk/+/14281|https://gerrit.asterisk.org/c/asterisk/+/14281]

By: Friendly Automation (friendly-automation) 2020-04-20 09:57:11.829-0500

Change 14273 merged by Friendly Automation:
curl: Add build-time dependency.

[https://gerrit.asterisk.org/c/asterisk/+/14273|https://gerrit.asterisk.org/c/asterisk/+/14273]

By: Friendly Automation (friendly-automation) 2020-04-20 09:58:54.678-0500

Change 14287 merged by Friendly Automation:
curl: Add build-time dependency.

[https://gerrit.asterisk.org/c/asterisk/+/14287|https://gerrit.asterisk.org/c/asterisk/+/14287]

By: Friendly Automation (friendly-automation) 2020-04-20 10:03:04.278-0500

Change 14270 merged by Friendly Automation:
app_getcpeid: Add build-time dependency.

[https://gerrit.asterisk.org/c/asterisk/+/14270|https://gerrit.asterisk.org/c/asterisk/+/14270]

By: Friendly Automation (friendly-automation) 2020-04-20 10:06:31.890-0500

Change 14282 merged by Friendly Automation:
app_getcpeid: Add build-time dependency.

[https://gerrit.asterisk.org/c/asterisk/+/14282|https://gerrit.asterisk.org/c/asterisk/+/14282]

By: Friendly Automation (friendly-automation) 2020-04-20 10:07:36.763-0500

Change 14288 merged by Friendly Automation:
curl: Add build-time dependency.

[https://gerrit.asterisk.org/c/asterisk/+/14288|https://gerrit.asterisk.org/c/asterisk/+/14288]

By: Friendly Automation (friendly-automation) 2020-04-20 10:07:58.500-0500

Change 14283 merged by Friendly Automation:
app_getcpeid: Add build-time dependency.

[https://gerrit.asterisk.org/c/asterisk/+/14283|https://gerrit.asterisk.org/c/asterisk/+/14283]

By: Friendly Automation (friendly-automation) 2020-04-20 10:44:37.595-0500

Change 14286 merged by Friendly Automation:
res_pjsip_refer: Add build-time dependency.

[https://gerrit.asterisk.org/c/asterisk/+/14286|https://gerrit.asterisk.org/c/asterisk/+/14286]

By: Friendly Automation (friendly-automation) 2020-04-20 10:56:54.950-0500

Change 14255 merged by Friendly Automation:
res_pjsip_refer: Add build-time dependency.

[https://gerrit.asterisk.org/c/asterisk/+/14255|https://gerrit.asterisk.org/c/asterisk/+/14255]

By: Friendly Automation (friendly-automation) 2020-04-20 10:59:17.968-0500

Change 14256 merged by Friendly Automation:
res_pjsip_refer: Add build-time dependency.

[https://gerrit.asterisk.org/c/asterisk/+/14256|https://gerrit.asterisk.org/c/asterisk/+/14256]

By: Friendly Automation (friendly-automation) 2020-04-20 11:03:58.729-0500

Change 14289 merged by Joshua Colp:
curl: Add build-time dependency.

[https://gerrit.asterisk.org/c/asterisk/+/14289|https://gerrit.asterisk.org/c/asterisk/+/14289]

By: Friendly Automation (friendly-automation) 2020-04-20 11:04:31.559-0500

Change 14258 merged by Joshua Colp:
res_pjsip: Sync load- and build-time deps.

[https://gerrit.asterisk.org/c/asterisk/+/14258|https://gerrit.asterisk.org/c/asterisk/+/14258]

By: Friendly Automation (friendly-automation) 2020-04-20 11:04:51.994-0500

Change 14267 merged by Joshua Colp:
res_pjsip: Sync load- and build-time deps.

[https://gerrit.asterisk.org/c/asterisk/+/14267|https://gerrit.asterisk.org/c/asterisk/+/14267]

By: Friendly Automation (friendly-automation) 2020-04-20 11:05:12.675-0500

Change 14269 merged by Joshua Colp:
app_getcpeid: Add build-time dependency.

[https://gerrit.asterisk.org/c/asterisk/+/14269|https://gerrit.asterisk.org/c/asterisk/+/14269]

By: Friendly Automation (friendly-automation) 2020-04-20 11:05:35.782-0500

Change 14266 merged by Joshua Colp:
res_pjsip_refer: Add build-time dependency.

[https://gerrit.asterisk.org/c/asterisk/+/14266|https://gerrit.asterisk.org/c/asterisk/+/14266]

By: Friendly Automation (friendly-automation) 2020-04-20 11:44:53.314-0500

Change 14285 merged by Friendly Automation:
cdr_odbc: Sync load- and build-time deps.

[https://gerrit.asterisk.org/c/asterisk/+/14285|https://gerrit.asterisk.org/c/asterisk/+/14285]

By: Friendly Automation (friendly-automation) 2020-04-20 12:05:08.649-0500

Change 14257 merged by Joshua Colp:
res_pjsip: Sync load- and build-time deps.

[https://gerrit.asterisk.org/c/asterisk/+/14257|https://gerrit.asterisk.org/c/asterisk/+/14257]

By: Friendly Automation (friendly-automation) 2020-04-20 12:07:25.401-0500

Change 14284 merged by Friendly Automation:
cdr_odbc: Sync load- and build-time deps.

[https://gerrit.asterisk.org/c/asterisk/+/14284|https://gerrit.asterisk.org/c/asterisk/+/14284]

By: Friendly Automation (friendly-automation) 2020-04-20 12:07:34.345-0500

Change 14272 merged by Friendly Automation:
cdr_odbc: Sync load- and build-time deps.

[https://gerrit.asterisk.org/c/asterisk/+/14272|https://gerrit.asterisk.org/c/asterisk/+/14272]