res_pjsip_refer: Add build-time dependency.

ASTERISK-28838

Change-Id: Ic693c3f464e35ec0db242afdb0a1415806af4e25